# sound-map

./: CMakeLists.txt  README.md
include/: serial-map.h  sound-map.h
src/: serial-map.cpp  sound-map-2.cpp  sound-map.c  sound-map.cpp  usb-dir.c  usb-dir.h
src/demos/: demo-1.cpp  demo-2.cpp  demo-3.cpp  demo-4.cpp
src/tests/: unit-test.cpp
